Fix nav-bar size issue on tablet sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,7 @@ header {
 
 #logo {
     line-height: 50px;
+    padding-left: 0;
 }
 
 header a {
@@ -71,13 +72,14 @@ h1 {
 #menu {
     list-style-type: none;
     font-size: 120%;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     float: right;
     text-align: right;
 }
 
 #menu>li {
     margin-bottom: 0.5em;
+    margin-top: 10px;
 }
 
 .active {
@@ -226,7 +228,7 @@ main {
         position: relative;
         box-shadow: none;
         width: fit-content;
-        padding-right: 1rem;
+        padding-right: 1px;
         background: none;
     }
 
@@ -235,9 +237,9 @@ main {
     }
 
     #menu>li {
-        padding-left: 1rem;
+        padding-right: 5px;
         font-size: 130%;
-        margin: 0 0.5rem;
+         margin: 0 0.3rem; 
     }
 
     .nav-toggle-label {
@@ -247,7 +249,7 @@ main {
     #logo {
         font-size: 260%;
         line-height: 75px;
-        margin: 0 0.5rem;
+        /* margin: 0 0.5rem; */
     }
 
     /* Main content */
@@ -277,6 +279,9 @@ main {
         padding-top: 40px;
         margin-top: 350px;
     }
+
+    /* Offers section */
+
 }
 
 
